# webScraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/citrusti_webcrawler/: __init__.py
