[build-system]
requires = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "attrs",
    "beautifulsoup4",
    "bs4",
    "frozenlist",
    "hatchling",
    "idna",
    "lxml",
    "multidict",
    "PySocks",
    "regex",
    "setuptools",
    "soupsieve",
    "typing_extensions",
    "yarl"
]
build-backend = "hatchling.build"

[project]
name = "citrusti_webcrawler"
version = "0.0.1"
authors = [
  { name="Isaac To", email="isaacto@sfisaact.com" },
]
description = "A small simple web crawler"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/citrusti/WebCrawler"
Issues = "https://github.com/citrusti/WebCrawler/issues"